--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
@@ -12,7 +9,9 @@
 /build
 
 # misc
+.vscode
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
