--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.2.0",
     "socket.io-client": "^4.0.1",
     "use-sound": "^2.0.2",
     "web-vitals": "^1.1.1"
