--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-google-login": "^5.2.2",
